--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "babel src -d dist --source-maps",
-    "start": "nodemon src/index.js --exec babel-node",
+    "start": "nodemon src/index.js --exec babel-node src/index.js",
     "serve": "node dist/index.js",
     "clean": "rimraf dist"
   },
